--- a/user_management.html
+++ b/user_management.html
@@ -264,16 +264,17 @@
                                     </select>
                                   </label> 
                                 </div>
-                                <div class="btn-group">
-                                  <button class="btn btn-primary" id="btn_salvar" type="button">Salvar</button>
-                                </div>
-                              </form>
-                            </div>
-                            </div>
+                                <div class="save">
+                                  <div class="btn-group">
+                                    <button class="btn btn-primary" id="btn_salvar" type="button">SALVAR</button>
+                                  </div>
+                              </div>
+                            </form>
+                          </div>
                         </div>
                       </div>
-
-                      <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
+                    </div>
+                  <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                       <div class="modal" id="MyModalDeletar">
                         <div class="modal-dialog modal-dialog-centered">
                           <div class="modal-content">
@@ -284,11 +285,13 @@
                             <div class="modal-body">
                               <form>
                                 <h3>Tem certeza que deseja deletar o usuário?</h3>
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
-                                <button type="button" class="btn btn-primary">Sim</button>
+                                <div class="alternative">
+                                  <button type="button" class="btn btn-primary">SIM</button>
+                                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">NÃO</button>
+                                </div>
                               </form>
                             </div>
-                            </div>
+                          </div>
                         </div>
                       </div>
                     </td>
@@ -299,9 +302,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -310,9 +311,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete"type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -321,9 +320,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -332,9 +329,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -343,9 +338,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -354,9 +347,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -365,9 +356,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -376,9 +365,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -387,9 +374,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -398,9 +383,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -409,9 +392,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -420,9 +401,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -431,9 +410,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -442,9 +419,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -453,9 +428,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -464,9 +437,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -475,9 +446,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -486,9 +455,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar" id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -497,9 +464,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -508,9 +473,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -519,9 +482,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
             </tbody>
